Tue May 11 11:49:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/sdbm/sdbm.h (DBM): large file support on win32.
	  [ruby-core:23039]

	* ext/sdbm/depend: objects depend on sdbm.h.

Mon May 10 23:50:19 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): add a missing break.

Sun May  9 23:53:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RB_GC_GUARD_PTR): get rid of removal by
	  optimization.

Sun May  9 16:28:15 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (fiber_initialize_machine_stack_context): try to release
	  unnecessary fibers and retry to create.  based on a patch from
	  masaya tarui at [ruby-dev:41230].

Sun May  9 08:32:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json/generator/generator.c (fbuffer_inc_capa):
	  fix tha use of REALLOC_N. [ruby-dev:41227]

Sun May  9 09:15:03 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/imap/test_imap.rb: use IPv4 for
	  test_imaps_post_connection_check.  [ruby-dev:41189]

Sun May  9 02:57:02 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/fiddle/lib/fiddle.rb: only require DL if it hasn't been required
	  yet. [ruby-core:30095]

Sun May  9 09:30:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/{generator/generator.c,parser/parser.rl}: fixed indent.

	* ext/json/{generator,parser}/depend: added.

Sun May  9 05:44:59 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* include/ruby/ruby.h (rb_intern): fix compile error.

Sun May  9 02:37:33 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* io.c (nogvl_copy_stream_sendfile): mixed decls not allowed.

	* include/ruby/ruby.h (rb_intern): C90 needs nonempty macro
	  arguments.

Sun May  9 01:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cont.c (stackgrowdirection): removed duplicated code, use
	  STACK_UPPER macro instead.

	* gc.h (STACK_DIR_UPPER): moved from thread_pthread.c.

Sun May  9 00:35:56 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>
